adding chages after reviewing notes

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "rimraf build/",
     "build": "yarn clean && npx tsc",
     "start-prod": "npm run build && nodemon build/index.js",
-    "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx}'",
+    "format": "prettier --write 'src/**/*.ts'",
     "lint": "eslint . --ext .ts"
   },
   "repository": {
